@@ -155,6 +155,9 @@ LIS2 from VLSystem (http://www.vlsys.co.kr), connected to USB
 .B bwctusb
 USB-to-HD44780 converter by BWCT (http://www.bwct.de)
 .TP
+.B lcd2usb
+Till Harbaum's open source/open hardware LCD2USB (http://www.harbaum.org/till/lcd2usb/)
+.TP
 .B i2c
 LCD in 4-bit mode driven by PCF8574(A) / PCA9554(A), connected via I2C bus
 .RE
